<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_90px"
        android:background="@color/button_text_color">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/top_50px"
            android:text="@string/city"
            android:textColor="@color/white"
            android:textSize="@dimen/top_50px"
            android:layout_gravity="center"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="20">

        </LinearLayout>

        <ImageButton
            android:id="@+id/btn_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/top_50px"
            android:background="@color/transparent"
            android:padding="0.0dp"
            android:src="@drawable/btn_close"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/font_30px"
        android:layout_marginLeft="@dimen/top_50px"
        android:layout_marginRight="@dimen/top_50px"
        android:gravity="center">

        <Button
            android:id="@+id/btn_nation_wide"
            android:layout_width="@dimen/button_width_190px"
            android:layout_height="@dimen/top_60px"
            android:text="@string/nation_wide"
            android:textColor="@color/button_text_color"
            android:textSize="@dimen/button_text_size_35px"
            android:background="@drawable/button"
            android:padding="0.0dp"/>

        <Button
            android:id="@+id/btn_seoul"
            android:layout_marginLeft="@dimen/button_left_margin_15px"
            android:layout_width="@dimen/button_width_190px"
            android:layout_height="@dimen/top_60px"
            android:text="@string/seoul"
            android:textColor="@color/button_text_color"
            android:textSize="@dimen/button_text_size_35px"
            android:background="@drawable/button"
            android:padding="0.0dp"/>

        <Button
            android:id="@+id/btn_incheon"
            android:layout_marginLeft="@dimen/button_left_margin_15px"
            android:layout_width="@dimen/button_width_190px"
            android:layout_height="@dimen/top_60px"
            android:text="@string/incheon"
            android:textColor="@color/button_text_color"
            android:textSize="@dimen/button_text_size_35px"
            android:background="@drawable/button"
            android:padding="0.0dp"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_20px"
        android:layout_marginLeft="@dimen/top_50px"
        android:layout_marginRight="@dimen/top_50px"
        android:gravity="center">

        <Button
            android:id="@+id/btn_daejun"
            android:layout_width="@dimen/button_width_190px"
            android:layout_height="@dimen/top_60px"
            android:text="@string/daejun"
            android:textColor="@color/button_text_color"
            android:textSize="@dimen/button_text_size_35px"
            android:background="@drawable/button"
            android:padding="0.0dp"/>

        <Button
            android:id="@+id/btn_deagu"
            android:layout_marginLeft="@dimen/button_left_margin_15px"
            android:layout_width="@dimen/button_width_190px"
            android:layout_height="@dimen/top_60px"
            android:text="@string/deagu"
            android:textColor="@color/button_text_color"
            android:textSize="@dimen/button_text_size_35px"
            android:background="@drawable/button"
            android:padding="0.0dp"/>

        <Button
            android:id="@+id/btn_kangju"
            android:layout_marginLeft="@dimen/button_left_margin_15px"
            android:layout_width="@dimen/button_width_190px"
            android:layout_height="@dimen/top_60px"
            android:text="@string/kangju"
            android:textColor="@color/button_text_color"
            android:textSize="@dimen/button_text_size_35px"
            android:background="@drawable/button"
            android:padding="0.0dp"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_20px"
        android:layout_marginLeft="@dimen/top_50px"
        android:layout_marginRight="@dimen/top_50px"
        android:gravity="center">

        <Button
            android:id="@+id/btn_ulsan"
            android:layout_width="@dimen/button_width_190px"
            android:layout_height="@dimen/top_60px"
            android:text="@string/ulsan"
            android:textColor="@color/button_text_color"
            android:textSize="@dimen/button_text_size_35px"
            android:background="@drawable/button"
            android:padding="0.0dp"/>

        <Button
            android:id="@+id/btn_pusan"
            android:layout_marginLeft="@dimen/button_left_margin_15px"
            android:layout_width="@dimen/button_width_190px"
            android:layout_height="@dimen/top_60px"
            android:text="@string/pusan"
            android:textColor="@color/button_text_color"
            android:textSize="@dimen/button_text_size_35px"
            android:background="@drawable/button"
            android:padding="0.0dp"/>

        <Button
            android:id="@+id/btn_kyunggi"
            android:layout_marginLeft="@dimen/button_left_margin_15px"
            android:layout_width="@dimen/button_width_190px"
            android:layout_height="@dimen/top_60px"
            android:text="@string/kyunggi"
            android:textColor="@color/button_text_color"
            android:textSize="@dimen/button_text_size_35px"
            android:background="@drawable/button"
            android:padding="0.0dp"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_20px"
        android:layout_marginLeft="@dimen/top_50px"
        android:layout_marginRight="@dimen/top_50px"
        android:gravity="center">

        <Button
            android:id="@+id/btn_gangwon"
            android:layout_width="@dimen/button_width_190px"
            android:layout_height="@dimen/top_60px"
            android:text="@string/gangwon"
            android:textColor="@color/button_text_color"
            android:textSize="@dimen/button_text_size_35px"
            android:background="@drawable/button"
            android:padding="0.0dp"/>

        <Button
            android:id="@+id/btn_chongchung"
            android:layout_marginLeft="@dimen/button_left_margin_15px"
            android:layout_width="@dimen/button_width_190px"
            android:layout_height="@dimen/top_60px"
            android:text="@string/chongchung"
            android:textColor="@color/button_text_color"
            android:textSize="@dimen/button_text_size_35px"
            android:background="@drawable/button"
            android:padding="0.0dp"/>

        <Button
            android:id="@+id/btn_jeolla"
            android:layout_marginLeft="@dimen/button_left_margin_15px"
            android:layout_width="@dimen/button_width_190px"
            android:layout_height="@dimen/top_60px"
            android:text="@string/jeolla"
            android:textColor="@color/button_text_color"
            android:textSize="@dimen/button_text_size_35px"
            android:background="@drawable/button"
            android:padding="0.0dp"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_20px"
        android:layout_marginLeft="@dimen/top_50px"
        android:layout_marginRight="@dimen/top_50px"
        android:layout_marginBottom="@dimen/font_30px"
        >

        <Button
            android:id="@+id/btn_kyungsang"
            android:layout_width="@dimen/button_width_190px"
            android:layout_height="@dimen/top_60px"
            android:text="@string/kyungsang"
            android:textColor="@color/button_text_color"
            android:textSize="@dimen/button_text_size_35px"
            android:background="@drawable/button"
            android:padding="0.0dp"/>

        <Button
            android:id="@+id/btn_jeju"
            android:layout_marginLeft="@dimen/button_left_margin_15px"
            android:layout_width="@dimen/button_width_190px"
            android:layout_height="@dimen/top_60px"
            android:text="@string/jeju"
            android:textColor="@color/button_text_color"
            android:textSize="@dimen/button_text_size_35px"
            android:background="@drawable/button"
            android:padding="0.0dp"/>

    </LinearLayout>


</LinearLayout>