<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_90px"
        android:background="@color/button_text_color">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/top_50px"
            android:text="@string/buy_title"
            android:textColor="@color/white"
            android:textSize="@dimen/top_50px"
            android:layout_gravity="center"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="20">

        </LinearLayout>

        <ImageButton
            android:id="@+id/btn_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/top_50px"
            android:background="@color/transparent"
            android:padding="0.0dp"
            android:src="@drawable/btn_close"
            />
    </LinearLayout>

    <Button
        android:id="@+id/btn_buy_5"
        android:layout_marginTop="@dimen/font_30px"
        android:layout_marginLeft="@dimen/top_50px"
        android:layout_marginRight="@dimen/top_50px"
        android:layout_width="@dimen/box_750px"
        android:layout_height="@dimen/top_70px"
        android:background="@drawable/button"
        android:text="@string/buy_5_month"
        android:textColor="@color/button_text_color"
        android:textSize="@dimen/button_text_size_35px"
        android:padding="0.0dp"
        android:gravity="center"/>

    <Button
        android:id="@+id/btn_buy_3"
        android:layout_marginTop="@dimen/font_30px"
        android:layout_marginLeft="@dimen/top_50px"
        android:layout_marginRight="@dimen/top_50px"
        android:layout_width="@dimen/box_750px"
        android:layout_height="@dimen/top_70px"
        android:background="@drawable/button"
        android:text="@string/buy_3_month"
        android:textColor="@color/button_text_color"
        android:textSize="@dimen/button_text_size_35px"
        android:padding="0.0dp"
        android:gravity="center"/>

    <Button
        android:id="@+id/btn_buy_1"
        android:layout_marginTop="@dimen/font_30px"
        android:layout_marginLeft="@dimen/top_50px"
        android:layout_marginRight="@dimen/top_50px"
        android:layout_width="@dimen/box_750px"
        android:layout_height="@dimen/top_70px"
        android:background="@drawable/button"
        android:text="@string/buy_1_month"
        android:textColor="@color/button_text_color"
        android:textSize="@dimen/button_text_size_35px"
        android:padding="0.0dp"
        android:gravity="center"/>

    <Button
        android:id="@+id/btn_buy_top"
        android:layout_marginTop="@dimen/font_30px"
        android:layout_marginLeft="@dimen/top_50px"
        android:layout_marginRight="@dimen/top_50px"
        android:layout_width="@dimen/box_750px"
        android:layout_height="@dimen/top_70px"
        android:background="@drawable/button"
        android:text="@string/buy_top"
        android:textColor="@color/button_text_color"
        android:textSize="@dimen/button_text_size_35px"
        android:padding="0.0dp"
        android:gravity="center"/>

    <Button
        android:id="@+id/btn_same_inter"
        android:layout_marginTop="@dimen/font_30px"
        android:layout_marginLeft="@dimen/top_50px"
        android:layout_marginRight="@dimen/top_50px"
        android:layout_marginBottom="@dimen/font_30px"
        android:layout_width="@dimen/box_750px"
        android:layout_height="@dimen/top_70px"
        android:background="@drawable/button"
        android:text="@string/buy_same_interesting"
        android:textColor="@color/button_text_color"
        android:textSize="@dimen/button_text_size_35px"
        android:padding="0.0dp"
        android:gravity="center"/>

</LinearLayout>