<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_90px"
        android:background="@color/button_text_color">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/top_50px"
            android:text="@string/login_reg"
            android:textColor="@color/white"
            android:textSize="@dimen/top_50px"
            android:layout_gravity="center"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="20">

        </LinearLayout>

        <ImageButton
            android:id="@+id/btn_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/top_50px"
            android:background="@color/transparent"
            android:padding="0.0dp"
            android:src="@drawable/btn_close"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/font_30px"
        android:layout_marginLeft="@dimen/top_50px"
        android:layout_marginRight="@dimen/top_50px"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alreay_user"
            android:textColor="@color/button_text_color"
            android:textSize="@dimen/button_text_size_35px"
            android:layout_weight="5"/>
        <LinearLayout
            android:layout_width="@dimen/top_50px"
            android:layout_height="wrap_content"></LinearLayout>
        <Button

            android:id="@+id/btn_login"
            android:layout_width="@dimen/button_width_200px"
            android:layout_height="@dimen/top_50px"
            android:textColor="@color/button_text_color"
            android:textSize="@dimen/button_text_size_35px"
            android:text="@string/login"
            android:background="@drawable/button"
            android:padding="0.0dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/font_30px"
        android:layout_marginLeft="@dimen/top_50px"
        android:layout_marginRight="@dimen/top_50px"
        android:layout_marginBottom="@dimen/font_30px"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_user"
            android:textColor="@color/button_text_color"
            android:textSize="@dimen/button_text_size_35px"
            android:layout_weight="5"/>

        <LinearLayout
            android:layout_width="@dimen/top_50px"
            android:layout_height="wrap_content"></LinearLayout>

        <Button
            android:id="@+id/btn_reg"
            android:layout_width="@dimen/button_width_200px"
            android:layout_height="@dimen/top_50px"
            android:textColor="@color/button_text_color"
            android:textSize="@dimen/button_text_size_35px"
            android:text="@string/register"
            android:background="@drawable/button"
            android:padding="0.0dp"
            />

    </LinearLayout>
</LinearLayout>